Bug 430878: Call PositionChildViews after sliding selection to top of page, to fix mispositioned scrollframes in print selection.  r+sr=roc a=dsicore